--- a/Ejercicio3_MariaLauraBrenes/pom.xml
+++ b/Ejercicio3_MariaLauraBrenes/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.3.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
+	<groupId>Ejercicio3_MariaLauraBrenes</groupId>
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Ejercicio3MariaLauraBrenes</name>
-	<description>Proyecto Tarea 3</description>
+	<name>Ejercicio3</name>
+	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
 		<license/>
