Cambio Nombre Archivo

--- a/Ejercicio3_MariaLauraBrenes/pom.xml
+++ b/Ejercicio3_MariaLauraBrenes/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>Ejercicio3_MariaLauraBrenes</groupId>
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Ejercicio3</name>
+	<name>Ejercicio3_MariaLauraBrenes</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
